test/cli/test-validating-admission-policy/check-user-info/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test
policies:
- policy.yaml
resources:
- deployment.yaml
userinfo: userinfo.yaml
results:
  - policy: check-user-info
    resources: 
    - nginx-deployment
    isValidatingAdmissionPolicy: true
    kind: Deployment
    result: pass
