test/cli/test-validating-admission-policy/check-user-info/userinfo.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: system-user
userInfo:
  username: example-system-masters
  groups:
  - system:masters
  - system:authenticated
